--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>To Do List</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+    <div class="navbar">
+        <h1>To-Do List</h1>
+    </div>
+
+    <div class="container">
+        <input type="text" id="listing" placeholder="Type list">
+        <button class="fa" id="addbtn" onclick="addList()">&#xf067</button>
+    </div>
+
+
+    <div class="list-items">
+        <!-- <div class="list">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Nemo, iusto sed. Incidunt, excepturi reprehenderit magnam
+                adipisci, voluptas accusamus, vero praesentium iusto
+                aspernatur molestiae tempore nobis alias illo ea dolor minima!</p>
+            <button id="deletebtn">Delete</button>
+        </div> -->
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
